--- a/Atividades/Aula05/Aula05/Views/Order/Create.cshtml
+++ b/Atividades/Aula05/Aula05/Views/Order/Create.cshtml
@@ -1,7 +1,8 @@
-﻿@model Aula05.ViewModels.OrderViewModels
+﻿@model Aula05.ViewModels.OrderViewModels;
+@model Modelo.Order;
 
 @{
-    ViewData["Titulo"] = "Criar pedido";
+    ViewData["Titulo"] = "Criar Order";
 }
 
 <div class="text-center">
