--- a/Atividades/Aula05/Aula05/Views/Order/Index.cshtml
+++ b/Atividades/Aula05/Aula05/Views/Order/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model List<Modelo.Customer>
 
 
-<a asp-action="Create" asp-controller="Customer" class="btn btn-light">
-    Novo Customer
+<a asp-action="Create" asp-controller="Order" class="btn btn-light">
+    Nova Order
 </a>
 
 @if (Model.Count > 0)
@@ -15,13 +15,13 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (Modelo.Customer customer in Model)
+            @foreach (Modelo.Order order in Model)
             {
                 <tr>
-                    <td>@customer.Id</td>
-                    <td>@customer.Name</td>
+                    <td>@order.Id</td>
+                    <td>@order.Name</td>
                     <td>
-                        <a asp-action="Delete" asp-controller="Customer" asp-route="@customer.Id" title="excluir customer @customer.Name">
+                        <a asp-action="Delete" asp-controller="Order" asp-route="@order.Id" title="excluir Order @order.Name">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
                                 <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
@@ -36,11 +36,11 @@
 else
 {
     <div>
-        Não existem registros de Customer
+        Não existem registros de Order
     </div>
 }
 
 
-<a asp-action="ExportDelimitedFile" asp-controller="Customer" class="btn btn-light">
+<a asp-action="ExportDelimitedFile" asp-controller="Order" class="btn btn-light">
     Exportar Delimitados
 </a>
