--- a/Atividades/Aula05/Aula05/Views/Order/Create.cshtml
+++ b/Atividades/Aula05/Aula05/Views/Order/Create.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Aula05.ViewModels.OrderViewModels;
-@model Modelo.Order;
 
 @{
     ViewData["Titulo"] = "Criar Order";
@@ -17,11 +16,36 @@
             <div class="row">
                 <div class="form-group">
                     <label asp-for="@Model.CustomerID">Nome:</label>
-                    <select asp-for="@Model.CustomerID" >
+                    <select asp-for="@Model.CustomerID">
                         @foreach(var c in Model.Customers)
                         {
-                            <option value="@c.Id">@c.Name</option>
+                        <option value="@c.Id">@c.Name</option>
                         }
+
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Selth>
+                                    <th>Produto</th>
+                                    <th>Quantidade</th>
+                                    <th>Valor</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @for(int i = 0; i < Model.SelectedItems!.count; i++) {
+                                    <tr>
+                                        <td><input asp-for="item.IsSelected" /></td>
+                                        <td>
+                                            <input type="hidden" asp-for="@Model.SelectedItems[i].OrderItem.Product!.Id">
+                                            <spam>@Model.SelectedItems[i].OrderItem.Product!.Name</spam>
+                                        </td>
+                                        <td><span>@string.Format("{0:C}", Model.SelectedItems[i].OrderItem.Product!.CurrentPrice)</span></td>
+                                        <td><input asp-for="@string.Format("{0:C}", Model.SelectedItems[i].OrderItem.Product!.Quantity)"></td>
+                                        <td><input asp-for="@string.Format("{0:C}", Model.SelectedItems[i].OrderItem.Product!.PurchasePrice)"></td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
                     </select>
                 </div>
             </div>
