--- a/Atividades/Aula05/Aula05/Views/Shared/_Layout.cshtml
+++ b/Atividades/Aula05/Aula05/Views/Shared/_Layout.cshtml
@@ -25,10 +25,17 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" 
-                            asp-area="" 
-                            asp-controller="Customer" 
-                            asp-action="Index">Customer</a>
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-controller="Customer"
+                               asp-action="Index">Customer</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-controller="Order"
+                               asp-action="Create">Order();</a>
                         </li>
 
                         <li class="nav-item">
